Fix running tests